frontend/shared/scss/base/text-styles.scss
@use 'variables' as *;

@mixin style-side-view-shadow() {
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}
@mixin style-box-shadow() {
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
}

.style-side-view-shadow {
    @include style-side-view-shadow();
}
.style-input-shadow {
    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05);
}
.style-overlay-shadow {
    box-shadow: 0px 7px 15px 3px rgba(0, 0, 0, 0.15);
}

.style-hr {
    height: $border-width;
    background: $color-border;
    border-radius: $border-width/2;
    padding: 0;
    margin: 20px 0;
    outline: none;
    border: 0;
}

.style-huge-title-1 {
    font-size: 38px;
    font-weight: 600;
}

.style-title-1 {
    font-size: 30px;
    font-weight: 600;
    line-height: 1.3;

    @media (max-width: 400px) {
        font-size: 25px;
    }
}

.style-title-2 {
    font-size: 20px;
    font-weight: 600;
}

.style-title-3 {
    font-size: 18px;
    font-weight: 600;
}

.style-title-small {
    font-size: 16px;
    font-weight: 600;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.style-title-list {
    font-size: 16px;
    padding-bottom: 4px;
}

.style-text-large {
    font-size: 20px;
    font-weight: 500;
    line-height: 1.4;
}

.style-tag {
    font-size: 11px;
    text-transform: uppercase;
    font-weight: bold;
    color: $color-primary;
    background: $color-primary-background;
    padding: 5px 7px;
    border-radius: $border-radius;

    &.warn {
        color: $color-warning-dark;
        background: $color-warning-background;
    }

    &.error {
        color: $color-error-dark;
        background: $color-error-background;
    }

    &.success {
        color: $color-success-dark;
        background: $color-success-background;
    }

    &.inline {
        // need to evaluate the usage of this class
        display: inline-block;
    }
}

.style-normal {
    font-size: 16px;
    line-height: 1.4;
    font-weight: 500;
    color: $color-dark;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.style-description {
    font-size: 16px;
    line-height: 1.4;
    font-weight: 500;
    color: $color-gray;

    @media (max-width: 400px) {
        font-size: 14px;
    }
}

.style-description-small {
    font-size: 14px;
    line-height: 1.4;
    font-weight: 500;
    color: $color-gray;

    @media (max-width: 400px) {
        font-size: 12px;
    }
}

.style-interactive-small {
    font-size: 14px;
    font-weight: 600;
    color: $color-gray;

    @media (max-width: 400px) {
        font-size: 12px;
    }
}

.style-input {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.2;
}

.style-button-small {
    @extend .style-title-small;
}

.style-button-smaller {
    @extend .style-title-small;
    font-weight: 500;
}

.style-label {
    @extend .style-title-small;
    display: block;
    margin-top: 20px;
}

.style-table-head {
    font-size: 16px;
    font-weight: 600;
    margin-top: 20px;
}

.style-placeholder {
    font-size: 16px;
    font-weight: 500;
    color: $color-gray;
}

.style-caption {
    font-size: 14px;
    font-weight: 600;
    color: $color-gray;
    text-transform: uppercase;

    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.style-description-small {
    font-size: 14px;
    font-weight: 500;
    line-height: 1.5;
}
.style-context-menu-item {
    font-size: 14px;
    font-weight: 600;
}

.style-definition-term {
    font-size: 14px;
    font-weight: 600;
    line-height: 1.5;
}
.style-definition-description {
    @extend .style-description-small;
    color: $color-gray;
}

.style-with-button {
    display: flex;
    flex-direction: row;

    &> *:first-child {
        flex-grow: 1;
    }

    &> *:last-child {
        flex-shrink: 0;

        > .button.text {
            margin: -5px 0;
        }
    }
}

.radio-description {
    display: block;
    @extend .style-description-small;
}

.details-grid {
    display: grid;
    grid-template-columns: 40% 60%;
    gap: 8px 15px;

    &.small {
        grid-template-columns: 150px 1fr;
    }

    dt {
        @extend .style-definition-term;
    }

    dd {
        @extend .style-definition-description;
    }
}

.main-text-container {
    &, .container {
        > h1:first-child {
            padding-bottom: 20px;
            @extend .style-title-1;

            + p:not([class]) {
                @extend .style-description;
                padding-bottom: 20px;

                &:last-child {
                    padding-bottom: 0;
                }
            }
        }
        
        > h2 {
            @extend .style-title-2;
            padding-bottom: 15px;
        }

        > h2.style-with-button {
            > *:first-child {
                padding-bottom: 15px;
            }
            padding-bottom: 0;
        }

        .segmented-control + h2 {
            padding-top: 20px;
        }

        > h2 + p {
            &:not([class]) {
                @extend .style-description;
                padding-bottom: 20px;
            }
        }

        > hr {
            @extend .style-hr;
            margin: 30px 0;
            margin: 30px calc(-1 * var(--st-horizontal-padding, 40px));
        }
    }
}

.style-illustration-img {
    width: 50px;
    height: 50px;

    @media (max-width: 400px) {
        width: 40px;
        height: 40px;
    }

    @media (max-width: 350px) {
        width: 30px;
        height: 30px;
    }
}

.style-bubble {
    background: $color-error;
    border-radius: 30px;
    font-size: 13px;
    color: $color-white;
    display: inline-block;
    padding: 0 4px;
    height: 21px;
    min-width: 21px;
    box-sizing: border-box;
    font-weight: bold;
    line-height: 21px;
    vertical-align: text-bottom;
}

